--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.31",
         "laravel/tinker": "^2.10.1",
+        "predis/predis": "^2.3",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
