--- a/.env
+++ b/.env
@@ -27,6 +27,15 @@ DB_DATABASE=callmo
 DB_USERNAME=callmo
 DB_PASSWORD=callmo
 
+
+
+# DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=callmo
+# DB_USERNAME=callmo
+# DB_PASSWORD=callmo
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
