--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.31",
+        "laravel/pulse": "^1.4",
         "laravel/tinker": "^2.10.1",
         "predis/predis": "^2.3",
         "tightenco/ziggy": "^2.4"
