--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.31",
         "laravel/pulse": "^1.4",
+        "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.10.1",
         "predis/predis": "^2.3",
         "tightenco/ziggy": "^2.4"
