--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/horizon": "^5.31",
         "laravel/pulse": "^1.4",
         "laravel/reverb": "^1.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "predis/predis": "^2.3",
         "tightenco/ziggy": "^2.4"
