--- a/.env
+++ b/.env
@@ -76,7 +76,7 @@ VITE_APP_NAME="${APP_NAME}"
 REVERB_APP_ID=298683
 REVERB_APP_KEY=pwtlkkssumyt3shnmane
 REVERB_APP_SECRET=xn61ulfgwgiot8goatkz
-REVERB_HOST="caller.maeplet.com"
+REVERB_HOST="caller.maeplet.com/reverb"
 REVERB_PORT=8080
 REVERB_SCHEME=http
 
