--- a/.env
+++ b/.env
@@ -77,8 +77,8 @@ REVERB_APP_ID=298683
 REVERB_APP_KEY=pwtlkkssumyt3shnmane
 REVERB_APP_SECRET=xn61ulfgwgiot8goatkz
 REVERB_HOST="caller.maeplet.com/reverb"
-REVERB_PORT=443
-REVERB_SCHEME=https
+REVERB_PORT=8080
+REVERB_SCHEME=http
 
 VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
 VITE_REVERB_HOST="${REVERB_HOST}"
