--- a/.env
+++ b/.env
@@ -78,7 +78,7 @@ REVERB_APP_KEY=pwtlkkssumyt3shnmane
 REVERB_APP_SECRET=xn61ulfgwgiot8goatkz
 REVERB_HOST="caller.maeplet.com/reverb"
 REVERB_PORT=8080
-REVERB_SCHEME=http
+REVERB_SCHEME=https
 
 VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
 VITE_REVERB_HOST="${REVERB_HOST}"
